add not so general guidelines too